// This file is part of OpenTSDB.
// Copyright (C) 2018  The OpenTSDB Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";

option java_package = "net.opentsdb.data.pbuf";
option java_outer_classname = "TimeSeriesDataSequencePB";

import "google/protobuf/any.proto";
import "TimeStamp.proto";

/*
 * Encodeds a segment of data with a start and stop end time.
 */
message TimeSeriesDataSegment {

  /* The start timestamp of the segment. */
  TimeStamp start = 1;
  
  /* The end timestamp of the segment. */
  TimeStamp end = 2;
  
  /* The encoded data type. */
  google.protobuf.Any data = 5;
  
}